y.output
Terminals which are not used

   OP1
   RESERVED


Grammar

    0 $accept: Start $end

    1 Start: Program

    2 Program: CLASS ID OBRACE Declarations CBRACE

    3 Declarations: Declarations FieldDecl
    4             | Declarations MethodDecl
    5             | /* empty */

    6 FieldDecl: STATIC VarDecl

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    8 MethodType: Type
    9           | VOID

   10 Go_Statement: Go_Statement Statement
   11             | /* empty */

   12 Go_VarDecl: Go_VarDecl VarDecl
   13           | /* empty */

   14 FormalParams: Type ID Go_Comma_Type
   15             | STRING OSQUARE CSQUARE ID
   16             | /* empty */

   17 Go_Comma_Type: Go_Comma_Type COMMA Type ID
   18              | /* empty */

   19 VarDecl: Type ID Go_Comma_ID SEMIC

   20 Go_Comma_ID: Go_Comma_ID COMMA ID
   21            | /* empty */

   22 Type: Type_Type
   23     | Type_Type OSQUARE CSQUARE

   24 Type_Type: INT
   25          | BOOL

   26 Statement: OBRACE Statement_Repeat CBRACE
   27          | IF OCURV Expr CCURV Statement
   28          | IF OCURV Expr CCURV Statement ELSE Statement
   29          | WHILE OCURV Expr CCURV Statement
   30          | PRINT OCURV Expr CCURV SEMIC
   31          | ID OC_Square ASSIGN Expr SEMIC
   32          | RETURN SEMIC
   33          | RETURN Expr SEMIC

   34 Statement_Repeat: Statement_Repeat Statement
   35                 | /* empty */

   36 OC_Square: OSQUARE Expr CSQUARE
   37          | /* empty */

   38 Expr: exprType1
   39     | exprType1 OSQUARE Expr CSQUARE
   40     | exprType2

   41 exprType1: Expr AND Expr
   42          | Expr OR Expr
   43          | Expr OP2 Expr
   44          | Expr OP3 Expr
   45          | Expr OP4 Expr
   46          | Terminal
   47          | NOT Expr
   48          | OP3 Expr
   49          | Expr DOTLENGTH
   50          | PARSEINT OCURV ID OSQUARE Expr CSQUARE CCURV
   51          | OCURV Expr CCURV

   52 exprType2: NEW Type_Type OSQUARE Expr CSQUARE

   53 Terminal: ID
   54         | INTLIT
   55         | BOOLLIT
   56         | ID OCURV Args CCURV

   57 Args: Expr Comma_Expression
   58     | /* empty */

   59 Comma_Expression: COMMA Expr Comma_Expression
   60                 | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
THEN (258)
ELSE (259) 28
REDUCEEXPRESSON1 (260)
CLASS (261) 2
ID (262) 2 7 14 15 17 19 20 31 50 53 56
OBRACE (263) 2 7 26
CBRACE (264) 2 7 26
STATIC (265) 6 7
PUBLIC (266) 7
VOID (267) 9
OCURV (268) 7 27 28 29 30 50 51 56
CCURV (269) 7 27 28 29 30 50 51 56
COMMA (270) 17 20 59
STRING (271) 15
SEMIC (272) 19 30 31 32 33
INT (273) 24
BOOL (274) 25
BOOLLIT (275) 55
PRINT (276) 30
INTLIT (277) 54
DOTLENGTH (278) 49
NOT (279) 47
PARSEINT (280) 50
NEW (281) 52
ASSIGN (282) 31
CSQUARE (283) 15 23 36 39 50 52
IF (284) 27 28
OP1 (285)
OP2 (286) 43
OP3 (287) 44 48
OP4 (288) 45
OSQUARE (289) 15 23 36 39 50 52
RETURN (290) 32 33
RESERVED (291)
WHILE (292) 29
OR (293) 42
AND (294) 41
UNARY_HIGHEST_VAL (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Start (42)
    on left: 1, on right: 0
Program (43)
    on left: 2, on right: 1
Declarations (44)
    on left: 3 4 5, on right: 2 3 4
FieldDecl (45)
    on left: 6, on right: 3
MethodDecl (46)
    on left: 7, on right: 4
MethodType (47)
    on left: 8 9, on right: 7
Go_Statement (48)
    on left: 10 11, on right: 7 10
Go_VarDecl (49)
    on left: 12 13, on right: 7 12
FormalParams (50)
    on left: 14 15 16, on right: 7
Go_Comma_Type (51)
    on left: 17 18, on right: 14 17
VarDecl (52)
    on left: 19, on right: 6 12
Go_Comma_ID (53)
    on left: 20 21, on right: 19 20
Type (54)
    on left: 22 23, on right: 8 14 17 19
Type_Type (55)
    on left: 24 25, on right: 22 23 52
Statement (56)
    on left: 26 27 28 29 30 31 32 33, on right: 10 27 28 29 34
Statement_Repeat (57)
    on left: 34 35, on right: 26 34
OC_Square (58)
    on left: 36 37, on right: 31
Expr (59)
    on left: 38 39 40, on right: 27 28 29 30 31 33 36 39 41 42 43 44
    45 47 48 49 50 51 52 57 59
exprType1 (60)
    on left: 41 42 43 44 45 46 47 48 49 50 51, on right: 38 39
exprType2 (61)
    on left: 52, on right: 40
Terminal (62)
    on left: 53 54 55 56, on right: 46
Args (63)
    on left: 57 58, on right: 56
Comma_Expression (64)
    on left: 59 60, on right: 57 59


state 0

    0 $accept: . Start $end

    CLASS  shift, and go to state 1

    Start    go to state 2
    Program  go to state 3


state 1

    2 Program: CLASS . ID OBRACE Declarations CBRACE

    ID  shift, and go to state 4


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 5


state 3

    1 Start: Program .

    $default  reduce using rule 1 (Start)


state 4

    2 Program: CLASS ID . OBRACE Declarations CBRACE

    OBRACE  shift, and go to state 6


state 5

    0 $accept: Start $end .

    $default  accept


state 6

    2 Program: CLASS ID OBRACE . Declarations CBRACE

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 7


state 7

    2 Program: CLASS ID OBRACE Declarations . CBRACE
    3 Declarations: Declarations . FieldDecl
    4             | Declarations . MethodDecl

    CBRACE  shift, and go to state 8
    STATIC  shift, and go to state 9
    PUBLIC  shift, and go to state 10

    FieldDecl   go to state 11
    MethodDecl  go to state 12


state 8

    2 Program: CLASS ID OBRACE Declarations CBRACE .

    $default  reduce using rule 2 (Program)


state 9

    6 FieldDecl: STATIC . VarDecl

    INT   shift, and go to state 13
    BOOL  shift, and go to state 14

    VarDecl    go to state 15
    Type       go to state 16
    Type_Type  go to state 17


state 10

    7 MethodDecl: PUBLIC . STATIC MethodType ID OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    STATIC  shift, and go to state 18


state 11

    3 Declarations: Declarations FieldDecl .

    $default  reduce using rule 3 (Declarations)


state 12

    4 Declarations: Declarations MethodDecl .

    $default  reduce using rule 4 (Declarations)


state 13

   24 Type_Type: INT .

    $default  reduce using rule 24 (Type_Type)


state 14

   25 Type_Type: BOOL .

    $default  reduce using rule 25 (Type_Type)


state 15

    6 FieldDecl: STATIC VarDecl .

    $default  reduce using rule 6 (FieldDecl)


state 16

   19 VarDecl: Type . ID Go_Comma_ID SEMIC

    ID  shift, and go to state 19


state 17

   22 Type: Type_Type .
   23     | Type_Type . OSQUARE CSQUARE

    OSQUARE  shift, and go to state 20

    $default  reduce using rule 22 (Type)


state 18

    7 MethodDecl: PUBLIC STATIC . MethodType ID OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    VOID  shift, and go to state 21
    INT   shift, and go to state 13
    BOOL  shift, and go to state 14

    MethodType  go to state 22
    Type        go to state 23
    Type_Type   go to state 17


state 19

   19 VarDecl: Type ID . Go_Comma_ID SEMIC

    $default  reduce using rule 21 (Go_Comma_ID)

    Go_Comma_ID  go to state 24


state 20

   23 Type: Type_Type OSQUARE . CSQUARE

    CSQUARE  shift, and go to state 25


state 21

    9 MethodType: VOID .

    $default  reduce using rule 9 (MethodType)


state 22

    7 MethodDecl: PUBLIC STATIC MethodType . ID OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    ID  shift, and go to state 26


state 23

    8 MethodType: Type .

    $default  reduce using rule 8 (MethodType)


state 24

   19 VarDecl: Type ID Go_Comma_ID . SEMIC
   20 Go_Comma_ID: Go_Comma_ID . COMMA ID

    COMMA  shift, and go to state 27
    SEMIC  shift, and go to state 28


state 25

   23 Type: Type_Type OSQUARE CSQUARE .

    $default  reduce using rule 23 (Type)


state 26

    7 MethodDecl: PUBLIC STATIC MethodType ID . OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    OCURV  shift, and go to state 29


state 27

   20 Go_Comma_ID: Go_Comma_ID COMMA . ID

    ID  shift, and go to state 30


state 28

   19 VarDecl: Type ID Go_Comma_ID SEMIC .

    $default  reduce using rule 19 (VarDecl)


state 29

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV . FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    STRING  shift, and go to state 31
    INT     shift, and go to state 13
    BOOL    shift, and go to state 14

    $default  reduce using rule 16 (FormalParams)

    FormalParams  go to state 32
    Type          go to state 33
    Type_Type     go to state 17


state 30

   20 Go_Comma_ID: Go_Comma_ID COMMA ID .

    $default  reduce using rule 20 (Go_Comma_ID)


state 31

   15 FormalParams: STRING . OSQUARE CSQUARE ID

    OSQUARE  shift, and go to state 34


state 32

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams . CCURV OBRACE Go_VarDecl Go_Statement CBRACE

    CCURV  shift, and go to state 35


state 33

   14 FormalParams: Type . ID Go_Comma_Type

    ID  shift, and go to state 36


state 34

   15 FormalParams: STRING OSQUARE . CSQUARE ID

    CSQUARE  shift, and go to state 37


state 35

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams CCURV . OBRACE Go_VarDecl Go_Statement CBRACE

    OBRACE  shift, and go to state 38


state 36

   14 FormalParams: Type ID . Go_Comma_Type

    $default  reduce using rule 18 (Go_Comma_Type)

    Go_Comma_Type  go to state 39


state 37

   15 FormalParams: STRING OSQUARE CSQUARE . ID

    ID  shift, and go to state 40


state 38

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams CCURV OBRACE . Go_VarDecl Go_Statement CBRACE

    $default  reduce using rule 13 (Go_VarDecl)

    Go_VarDecl  go to state 41


state 39

   14 FormalParams: Type ID Go_Comma_Type .
   17 Go_Comma_Type: Go_Comma_Type . COMMA Type ID

    COMMA  shift, and go to state 42

    $default  reduce using rule 14 (FormalParams)


state 40

   15 FormalParams: STRING OSQUARE CSQUARE ID .

    $default  reduce using rule 15 (FormalParams)


state 41

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams CCURV OBRACE Go_VarDecl . Go_Statement CBRACE
   12 Go_VarDecl: Go_VarDecl . VarDecl

    INT   shift, and go to state 13
    BOOL  shift, and go to state 14

    $default  reduce using rule 11 (Go_Statement)

    Go_Statement  go to state 43
    VarDecl       go to state 44
    Type          go to state 16
    Type_Type     go to state 17


state 42

   17 Go_Comma_Type: Go_Comma_Type COMMA . Type ID

    INT   shift, and go to state 13
    BOOL  shift, and go to state 14

    Type       go to state 45
    Type_Type  go to state 17


state 43

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement . CBRACE
   10 Go_Statement: Go_Statement . Statement

    ID      shift, and go to state 46
    OBRACE  shift, and go to state 47
    CBRACE  shift, and go to state 48
    PRINT   shift, and go to state 49
    IF      shift, and go to state 50
    RETURN  shift, and go to state 51
    WHILE   shift, and go to state 52

    Statement  go to state 53


state 44

   12 Go_VarDecl: Go_VarDecl VarDecl .

    $default  reduce using rule 12 (Go_VarDecl)


state 45

   17 Go_Comma_Type: Go_Comma_Type COMMA Type . ID

    ID  shift, and go to state 54


state 46

   31 Statement: ID . OC_Square ASSIGN Expr SEMIC

    OSQUARE  shift, and go to state 55

    $default  reduce using rule 37 (OC_Square)

    OC_Square  go to state 56


state 47

   26 Statement: OBRACE . Statement_Repeat CBRACE

    $default  reduce using rule 35 (Statement_Repeat)

    Statement_Repeat  go to state 57


state 48

    7 MethodDecl: PUBLIC STATIC MethodType ID OCURV FormalParams CCURV OBRACE Go_VarDecl Go_Statement CBRACE .

    $default  reduce using rule 7 (MethodDecl)


state 49

   30 Statement: PRINT . OCURV Expr CCURV SEMIC

    OCURV  shift, and go to state 58


state 50

   27 Statement: IF . OCURV Expr CCURV Statement
   28          | IF . OCURV Expr CCURV Statement ELSE Statement

    OCURV  shift, and go to state 59


state 51

   32 Statement: RETURN . SEMIC
   33          | RETURN . Expr SEMIC

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    SEMIC     shift, and go to state 62
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 69
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 52

   29 Statement: WHILE . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 73


state 53

   10 Go_Statement: Go_Statement Statement .

    $default  reduce using rule 10 (Go_Statement)


state 54

   17 Go_Comma_Type: Go_Comma_Type COMMA Type ID .

    $default  reduce using rule 17 (Go_Comma_Type)


state 55

   36 OC_Square: OSQUARE . Expr CSQUARE

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 74
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 56

   31 Statement: ID OC_Square . ASSIGN Expr SEMIC

    ASSIGN  shift, and go to state 75


state 57

   26 Statement: OBRACE Statement_Repeat . CBRACE
   34 Statement_Repeat: Statement_Repeat . Statement

    ID      shift, and go to state 46
    OBRACE  shift, and go to state 47
    CBRACE  shift, and go to state 76
    PRINT   shift, and go to state 49
    IF      shift, and go to state 50
    RETURN  shift, and go to state 51
    WHILE   shift, and go to state 52

    Statement  go to state 77


state 58

   30 Statement: PRINT OCURV . Expr CCURV SEMIC

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 78
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 59

   27 Statement: IF OCURV . Expr CCURV Statement
   28          | IF OCURV . Expr CCURV Statement ELSE Statement

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 79
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 60

   53 Terminal: ID .
   56         | ID . OCURV Args CCURV

    OCURV  shift, and go to state 80

    $default  reduce using rule 53 (Terminal)


state 61

   51 exprType1: OCURV . Expr CCURV

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 81
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 62

   32 Statement: RETURN SEMIC .

    $default  reduce using rule 32 (Statement)


state 63

   55 Terminal: BOOLLIT .

    $default  reduce using rule 55 (Terminal)


state 64

   54 Terminal: INTLIT .

    $default  reduce using rule 54 (Terminal)


state 65

   47 exprType1: NOT . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 82
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 66

   50 exprType1: PARSEINT . OCURV ID OSQUARE Expr CSQUARE CCURV

    OCURV  shift, and go to state 83


state 67

   52 exprType2: NEW . Type_Type OSQUARE Expr CSQUARE

    INT   shift, and go to state 13
    BOOL  shift, and go to state 14

    Type_Type  go to state 84


state 68

   48 exprType1: OP3 . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 85
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 69

   33 Statement: RETURN Expr . SEMIC
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    SEMIC      shift, and go to state 86
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 70

   38 Expr: exprType1 .
   39     | exprType1 . OSQUARE Expr CSQUARE

    OSQUARE  shift, and go to state 93

    $default  reduce using rule 38 (Expr)


state 71

   40 Expr: exprType2 .

    $default  reduce using rule 40 (Expr)


state 72

   46 exprType1: Terminal .

    $default  reduce using rule 46 (exprType1)


state 73

   29 Statement: WHILE OCURV . Expr CCURV Statement

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 94
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 74

   36 OC_Square: OSQUARE Expr . CSQUARE
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87
    CSQUARE    shift, and go to state 95
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 75

   31 Statement: ID OC_Square ASSIGN . Expr SEMIC

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 96
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 76

   26 Statement: OBRACE Statement_Repeat CBRACE .

    $default  reduce using rule 26 (Statement)


state 77

   34 Statement_Repeat: Statement_Repeat Statement .

    $default  reduce using rule 34 (Statement_Repeat)


state 78

   30 Statement: PRINT OCURV Expr . CCURV SEMIC
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    CCURV      shift, and go to state 97
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 79

   27 Statement: IF OCURV Expr . CCURV Statement
   28          | IF OCURV Expr . CCURV Statement ELSE Statement
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    CCURV      shift, and go to state 98
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 80

   56 Terminal: ID OCURV . Args CCURV

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    $default  reduce using rule 58 (Args)

    Expr       go to state 99
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72
    Args       go to state 100


state 81

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH
   51          | OCURV Expr . CCURV

    CCURV      shift, and go to state 101
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 82

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   47          | NOT Expr .
   49          | Expr . DOTLENGTH

    $default  reduce using rule 47 (exprType1)


state 83

   50 exprType1: PARSEINT OCURV . ID OSQUARE Expr CSQUARE CCURV

    ID  shift, and go to state 102


state 84

   52 exprType2: NEW Type_Type . OSQUARE Expr CSQUARE

    OSQUARE  shift, and go to state 103


state 85

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   48          | OP3 Expr .
   49          | Expr . DOTLENGTH

    $default  reduce using rule 48 (exprType1)


state 86

   33 Statement: RETURN Expr SEMIC .

    $default  reduce using rule 33 (Statement)


state 87

   49 exprType1: Expr DOTLENGTH .

    $default  reduce using rule 49 (exprType1)


state 88

   43 exprType1: Expr OP2 . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 104
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 89

   44 exprType1: Expr OP3 . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 105
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 90

   45 exprType1: Expr OP4 . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 106
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 91

   42 exprType1: Expr OR . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 107
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 92

   41 exprType1: Expr AND . Expr

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 108
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 93

   39 Expr: exprType1 OSQUARE . Expr CSQUARE

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 109
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 94

   29 Statement: WHILE OCURV Expr . CCURV Statement
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    CCURV      shift, and go to state 110
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 95

   36 OC_Square: OSQUARE Expr CSQUARE .

    $default  reduce using rule 36 (OC_Square)


state 96

   31 Statement: ID OC_Square ASSIGN Expr . SEMIC
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    SEMIC      shift, and go to state 111
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 97

   30 Statement: PRINT OCURV Expr CCURV . SEMIC

    SEMIC  shift, and go to state 112


state 98

   27 Statement: IF OCURV Expr CCURV . Statement
   28          | IF OCURV Expr CCURV . Statement ELSE Statement

    ID      shift, and go to state 46
    OBRACE  shift, and go to state 47
    PRINT   shift, and go to state 49
    IF      shift, and go to state 50
    RETURN  shift, and go to state 51
    WHILE   shift, and go to state 52

    Statement  go to state 113


state 99

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH
   57 Args: Expr . Comma_Expression

    COMMA      shift, and go to state 114
    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92

    $default  reduce using rule 60 (Comma_Expression)

    Comma_Expression  go to state 115


state 100

   56 Terminal: ID OCURV Args . CCURV

    CCURV  shift, and go to state 116


state 101

   51 exprType1: OCURV Expr CCURV .

    $default  reduce using rule 51 (exprType1)


state 102

   50 exprType1: PARSEINT OCURV ID . OSQUARE Expr CSQUARE CCURV

    OSQUARE  shift, and go to state 117


state 103

   52 exprType2: NEW Type_Type OSQUARE . Expr CSQUARE

    ID        shift, and go to state 60
    OCURV     shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    INTLIT    shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 66
    NEW       shift, and go to state 67
    OP3       shift, and go to state 68

    Expr       go to state 118
    exprType1  go to state 70
    exprType2  go to state 71
    Terminal   go to state 72


state 104

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   43          | Expr OP2 Expr .
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90

    $default  reduce using rule 43 (exprType1)


state 105

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   44          | Expr OP3 Expr .
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87
    OP4        shift, and go to state 90

    $default  reduce using rule 44 (exprType1)


state 106

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   45          | Expr OP4 Expr .
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87

    $default  reduce using rule 45 (exprType1)


state 107

   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   42          | Expr OR Expr .
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    AND        shift, and go to state 92

    $default  reduce using rule 42 (exprType1)


state 108

   41 exprType1: Expr . AND Expr
   41          | Expr AND Expr .
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90

    $default  reduce using rule 41 (exprType1)


state 109

   39 Expr: exprType1 OSQUARE Expr . CSQUARE
   41 exprType1: Expr . AND Expr
   42          | Expr . OR Expr
   43          | Expr . OP2 Expr
   44          | Expr . OP3 Expr
   45          | Expr . OP4 Expr
   49          | Expr . DOTLENGTH

    DOTLENGTH  shift, and go to state 87
    CSQUARE    shift, and go to state 119
    OP2        shift, and go to state 88
    OP3        shift, and go to state 89
    OP4        shift, and go to state 90
    OR         shift, and go to state 91
    AND        shift, and go to state 92


state 110

   29 Statement: WHILE OCURV Expr CCURV . Statement

    ID      shift, and go to state 46
    OBRACE  shift, and go to state 47
    PRINT   shift, and go to state 49
    IF      shift, and go to state 50
    RETURN  shift, and go to state 51
    WHILE   shift, and go to state 52

    Statement  go to state 120


state 111

   31 Statement: ID OC_Square ASSIGN Expr SEMIC .

    $default  reduce using rule 31 (Statement)


state 112

   30 Statement: PRINT OCURV Expr CCURV SEMIC .

    $default  reduce using rule 30 (Statement)


state 113
